tests/codegen/fail/interface/trait/no_fields.rs
use coasys_juniper::graphql_interface;

#[graphql_interface]
trait Character {}

fn main() {}
